--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <nav class="menu">
                 <ul>
                     <li>
-                        <a href="home.html">HOME</a>
+                        <a href="index.html">HOME</a>
                     </li>
                     <li>
                         <a href="Produk.html">PRODUK/SERVICE</a>
