--- a/Contact.html
+++ b/Contact.html
@@ -5,7 +5,8 @@
     <style>
     body{
         margin: 0px;
-        padding: 0px;
+        padding-left: 10%;
+        padding-right:  10%;
         background-color: white;
     }
     header{
@@ -129,6 +130,7 @@
                     </tr>
                 </table>
             </section>
+            <br>
             <footer>
                     NitipHelm.com</br>
                     contact me by email : NitipHelmjakarta@gmail.com</br>
