--- a/Produk.html
+++ b/Produk.html
@@ -5,7 +5,8 @@
     <style>
     body{
         margin: 0px;
-        padding: 0px;
+        padding-left: 10%;
+        padding-right:  10%;
         background-color: white;
     }
     header{
@@ -98,6 +99,7 @@
             <section style="text-align: center; font-size: large;">
                 <h2>SERVICE</h2>
                 <img src="download.jpg" width="60%">
+                <br>
                 <br>
                 <img src="Service1.jpg" width="60%">
                 <h3> Menawarkan Pencucian Helm </h3>
